# optimalization_project

cd_python/: .env  benchmark_lasso_cd.py  best_5_per_ds.csv  best_fastest.csv  best_loss.csv  best_mse.csv  best_single_method_per_ds.csv  datasets.py  experiment.py  lasso_cd_bench.csv  lasso_cd_bench_ext.csv  lasso_ctypes.py  main.py  plots.py  runner.py  script.py  test.py
cordinate_decent_algorithm/: CMakeLists.txt  cd_api.c  io.c  io.h  main.c  utils.c  utils.h
cordinate_decent_algorithm/core/: cd_engine.c  cd_engine.h  state.h
cordinate_decent_algorithm/rules/: rule_block_shuffle.c  rule_cyclic.c  rule_gs_r.c  rule_gs_s.c  rule_random.c  rule_shuffle.c  rules.h
cordinate_decent_algorithm/updates/: upd_accel_random.c  upd_accel_random_ls.c  upd_bcm.c  upd_prox_linear.c  upd_prox_linear_enet.c  upd_prox_linear_ext.c  upd_prox_linear_sgd.c  upd_prox_linear_svrg.c  upd_prox_point.c  updates.h
